feat: python http server intrinsics (#1678)
* feat: low level http apis

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: initial request handling api

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: handle expect/continue and handler errors

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: higher level intrinsic apis

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: initial flask intrinsics

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: routing and request accessor

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: query parameters and handler abort

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: url_for

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: fix variables handling in url_for

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* wip: response type mapping

Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>

* fix(graalvm-py): python vm init

fix(graalvm-py): use new preamble init style
fix(graalvm-py): properly map vfs tarball
fix(graalvm-py): rebuild python plugin config
fix(graalvm-py): expose `Flask` on `elide` module
fix(graalvm-py): injection of synthetic `elide` module
fix(graalvm-rb): match ruby init with python + js
fix(graalvm): flask server intrinsic hidden symbol

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix(tooling): pkl python configs

fix(tooling): python module name (pkl)
fix(tooling): parse pip dependencies as strings

Signed-off-by: Sam Gammon <sam@elide.dev>

* feat(graalvm): move flask intrinsic to hidden symbol

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: sample project for flask integration

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: make bean context available to polyglot engine

Signed-off-by: Sam Gammon <sam@elide.dev>

* feat(graalvm-py): `FlaskAPI` interface compliance for DI

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore(graalvm-py): cleaner py init